tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldCompile/syntax04/Test.java
public class Test {
	interface A {
		default void m() {
			String s = super.toString();
		}
	}
}