tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax02/Test.java
public class Test {
	public interface A {
		default void m();
	}
}